syntax = 'proto3';

package notifications;

option go_package = "route256/notifications/pkg/notifications_v1";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Notifications {

  rpc GetUserHistory(GetUserHistoryRequest) returns (GetUserHistoryResponse) {
    option (google.api.http) = {
      post: "/getuserhistory"
      body: "*"
    };
  }
}


message GetUserHistoryRequest {
  int64 user = 1 [(validate.rules).int64.gte = 1];
  int32 period = 2;
}

message GetUserHistoryResponse {
  repeated HisItem his = 1;
}

message HisItem {
  int64 order = 1;
  string time = 2;
}
